# python-coverage-comment-action

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.build  Dockerfile.run  LICENSE  MANIFEST.in  Makefile  README.md  action.yml  add-to-wiki.sh  data.json  default.md.j2  dev-env  dev-env-vars.dist  entrypoint.py  pyproject.toml  report.md  requirements.txt  setup.cfg
.circleci/: config.yml
.github/: release.yml  renovate.json5
.github/workflows/: autofix.yml  ci.yml  coverage-comment.yml  docker.yml  e2e-delete-repo.yml  e2e-external-phase-1.yml  e2e-external-phase-2.yml  e2e-external.yml  e2e-link-in-pr.yml  e2e-private-link-in-pr.yml  e2e-public-link-in-pr.yml  manual-release.yml  release.yml
coverage_comment/: __main__.py  activities.py  activity.py  annotations.py  badge.py  comment_file.py  communication.py  coverage.py  default.md.j2  diff_grouper.py  files.py  github.py  github_client.py  groups.py  json.py  log.py  log_utils.py  main.py  settings.py  storage.py  subprocess.py  template.py  wiki.py
coverage_comment/template_files/: comment.md.j2  comment_plain.md.j2  log.txt.j2  readme.md.j2
end_to_end_tests_repo/: pyproject.toml  setup.cfg
end_to_end_tests_repo/.github/workflows/: ci.yml  coverage-comment.yml
end_to_end_tests_repo/tests/: cases.csv  test_f.py
htmlcov/: class_index.html  d_c79324c3b0d4d28c___main___py.html  d_c79324c3b0d4d28c_activity_py.html  d_c79324c3b0d4d28c_annotations_py.html  d_c79324c3b0d4d28c_badge_py.html  d_c79324c3b0d4d28c_comment_file_py.html  d_c79324c3b0d4d28c_communication_py.html  d_c79324c3b0d4d28c_coverage_py.html  d_c79324c3b0d4d28c_diff_grouper_py.html  d_c79324c3b0d4d28c_files_py.html  d_c79324c3b0d4d28c_github_client_py.html  d_c79324c3b0d4d28c_github_py.html  d_c79324c3b0d4d28c_groups_py.html  d_c79324c3b0d4d28c_log_py.html  d_c79324c3b0d4d28c_log_utils_py.html  d_c79324c3b0d4d28c_main_py.html  d_c79324c3b0d4d28c_settings_py.html  d_c79324c3b0d4d28c_storage_py.html  d_c79324c3b0d4d28c_subprocess_py.html  d_c79324c3b0d4d28c_template_py.html  function_index.html  index.html  status.json  z_c79324c3b0d4d28c___main___py.html  z_c79324c3b0d4d28c_activities_py.html  z_c79324c3b0d4d28c_activity_py.html  z_c79324c3b0d4d28c_badge_py.html  z_c79324c3b0d4d28c_comment_file_py.html  z_c79324c3b0d4d28c_communication_py.html  z_c79324c3b0d4d28c_coverage_py.html  z_c79324c3b0d4d28c_diff_grouper_py.html  z_c79324c3b0d4d28c_files_py.html  z_c79324c3b0d4d28c_github_client_py.html  z_c79324c3b0d4d28c_github_py.html  z_c79324c3b0d4d28c_groups_py.html  z_c79324c3b0d4d28c_json_py.html  z_c79324c3b0d4d28c_log_py.html  z_c79324c3b0d4d28c_log_utils_py.html  z_c79324c3b0d4d28c_main_py.html  z_c79324c3b0d4d28c_settings_py.html  (+3 more)
scripts/: sync-pre-commit.py
src/: add-to-wiki  default.md.j2  entrypoint  requirements.txt
tests/: README.md  code.py  conftest.py  test_code.py  test_coverage.py  test_github.py  test_github_client.py  test_settings.py  test_subprocess.py  test_template.py  test_wiki.py
tests/end_to_end/: conftest.py  test_all.py
tests/end_to_end/repo/: pyproject.toml
tests/end_to_end/repo/.github/workflows/: ci.yml  coverage-comment.yml
tests/end_to_end/repo/end_to_end_tests_repo/: __init__.py
tests/end_to_end/repo/tests/: test_f.py
tests/integration/: conftest.py  test_coverage.py  test_github.py  test_main.py
tests/unit/: test_activity.py  test_annotations.py  test_badge.py  test_comment_file.py  test_communication.py  test_coverage.py  test_diff_grouper.py  test_dunder_main.py  test_files.py  test_github_client.py  test_groups.py  test_json.py  test_log_utils.py  test_main.py  test_settings.py  test_storage.py  test_subprocess.py  test_template.py  test_wiki.py
tool/: add-to-wiki.sh  default.md.j2  entrypoint.py  requirements.txt
