[tool.poetry]
name = "end_to_end_tests_repo"
version = "0.1.0"
description = ""
authors = ["Joachim Jablon <ewjoachim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
